--- a/016_sass_crash/scss/style.scss
+++ b/016_sass_crash/scss/style.scss
@@ -1,6 +1,4 @@
 @import 'config';
-@import 'utilities';
-@import 'buttons';
 
 * {
   margin: 0;
@@ -23,8 +21,7 @@ a {
 }
 
 .showcase {
-  background-color: $primary-color;
-  color: #fff;
+  @include set-background($primary-color);
   height: 600px;
 
   nav {
@@ -41,13 +38,13 @@ a {
       padding: 15px;
     }
 
+    a {
+      color: set-text-color($primary-color);
+    }
+
     a:hover {
       color: $secondary-color;
     }
-  }
-
-  a {
-    color: #fff;
   }
 
   // .showcase-content {
@@ -58,6 +55,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
 
     img {
       width: 50%;
@@ -67,9 +65,9 @@ a {
       font-size: 50px;
       line-height: 1.2;
     }
-
-    p {
-      margin: 20px 0;
-    }
   }
 }
+
+@import 'utilities';
+@import 'buttons';
+@import 'mobile';
